# paynet

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OBSERVABILITY.md  README.md  ROADMAP.md  STAGING.md  USAGE.md  docker-compose.app-mock.yml  docker-compose.app-sepolia.yml  docker-compose.app.yml  docker-compose.ci-mock.yml  docker-compose.ci-starknet.yml  docker-compose.ci-testnet.yml  docker-compose.ci.yml  docker-compose.mock.yml  docker-compose.sepolia.yml  docker-compose.staging.yml  docker-compose.testnet.yml  docker-compose.yml  rust-toolchain.toml
crates/bins/cli-wallet/: Cargo.toml
crates/bins/cli-wallet/src/: init.rs  main.rs  sync.rs
crates/bins/signer/: Cargo.toml  build.rs
crates/bins/signer/src/: build_server.rs  lib.rs  main.rs  server_errors.rs  state.rs
crates/bins/starknet-on-chain-setup/: Cargo.toml
crates/bins/starknet-on-chain-setup/src/: main.rs
crates/bins/web-app/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  webpack.config.js
crates/bins/web-app/frontend/src/: main.js
crates/bins/web-app/src/: abis.rs  main.rs  serve.rs
crates/bins/web-app/static/: styles.css
crates/bins/web-app/templates/: deposit.html  index.html  invalid_method.html  invalid_network.html  invalid_payload.html
crates/db-node/: Cargo.toml
crates/db-node/db/migrations/: 20241227011234_init.down.sql  20241227011234_init.up.sql  20250520181557_create_melt_payment_event.down.sql  20250520181557_create_melt_payment_event.up.sql
crates/db-node/src/: blind_signature.rs  gauge.rs  insert_keysets.rs  insert_spent_proofs.rs  keyset.rs  lib.rs  melt_quote.rs  mint_payment_event.rs  mint_quote.rs  payment_event.rs  proof.rs
crates/invoice-payment-indexer/: Cargo.toml
crates/invoice-payment-indexer/src/: db.rs  lib.rs
crates/libs/liquidity-source/: Cargo.toml
crates/libs/liquidity-source/src/: withdraw.rs
crates/libs/node-client/: Cargo.toml  build.rs
crates/libs/node-client/src/: lib.rs
crates/libs/nuts/: Cargo.toml
crates/libs/nuts/src/: amount.rs  lib.rs
crates/libs/nuts/src/nut00/: mod.rs  secret.rs
crates/libs/nuts/src/nut04/: mod.rs
crates/libs/nuts/src/nut05/: mod.rs
crates/libs/nuts/src/nut06/: mod.rs
crates/libs/nuts/src/nut07/: mod.rs
crates/libs/open-telemetry-tracing/: Cargo.toml
crates/libs/starknet/liquidity-source/: Cargo.toml
crates/libs/starknet/liquidity-source/src/: env_config.rs  indexer.rs  init.rs  lib.rs
crates/libs/starknet/substreams-sink/: Cargo.toml  buf.gen.yaml  build.rs
crates/libs/starknet/substreams-sink/src/: lib.rs  parse_inputs.rs  substreams.rs  substreams_stream.rs
crates/libs/starknet/types/: Cargo.toml
crates/libs/starknet/types/src/: assets.rs  assets_test.rs  constants.rs  lib.rs  transactions.rs  unit.rs
crates/libs/wallet/: Cargo.toml
crates/libs/wallet/src/: lib.rs  melt.rs  mint.rs  node.rs  seed_phrase.rs  sync.rs  wad.rs  wallet.rs
crates/libs/wallet/src/db/: balance.rs  keyset.rs  melt_quote.rs  mod.rs  proof.rs  wad.rs  wallet.rs
crates/libs/wallet/src/errors/: mod.rs
crates/libs/wallet/src/types/: compact_wad.rs  mod.rs  node_url.rs
crates/libs/wallet/src/wallet/: keyring.rs  mod.rs  sqlite.rs
crates/liquidity-source/: Cargo.toml
crates/liquidity-source/src/: deposit.rs  lib.rs  mock.rs  withdraw.rs
crates/liquidity-source/src/starknet/: deposit.rs  mod.rs  withdraw.rs
crates/memory-db/: .env.example  Cargo.toml  docker-compose.yml
crates/memory-db/db/migrations/: 20241227011234_init.down.sql  20241227011234_init.up.sql
crates/memory-db/src/: insert_blind_signatures.rs  insert_spent_proofs.rs  lib.rs  melt_quote.rs  mint_quote.rs
crates/nuts/: Cargo.toml
crates/nuts/src/: amount.rs  dhke.rs  lib.rs  types.rs
crates/nuts/src/nut00/: errors.rs  mod.rs  secret.rs  token.rs
crates/nuts/src/nut01/: keys.rs  mint_keys.rs  mod.rs  public_key.rs  secret_key.rs
crates/nuts/src/nut02/: error.rs  keyset_id.rs  mod.rs
crates/nuts/src/nut03/: mod.rs
crates/nuts/src/nut04/: mod.rs
crates/nuts/src/nut05/: mod.rs
crates/nuts/src/nut06/: mod.rs
crates/nuts/src/nut13/: mod.rs
crates/nuts/src/nut19/: mod.rs
crates/starknet-payment-indexer/: Cargo.toml
crates/starknet-payment-indexer/src/: db.rs  lib.rs
crates/starknet/liquidity-source/: Cargo.toml
crates/starknet/liquidity-source/src/: cashier.rs  deposit.rs  indexer.rs  lib.rs  withdraw.rs
crates/starknet/liquidity-source/src/deposit/: mock.rs  mod.rs
crates/starknet/liquidity-source/src/withdraw/: mock.rs
crates/tests/concurrency-tests/: Cargo.toml  tests.rs
crates/tests/concurrency-tests/src/: lib.rs
crates/tests/e2e-tests/: Cargo.toml  e2e.rs
crates/tests/e2e-tests/src/: lib.rs
crates/tests/node-tests/: Cargo.toml  README.md  cache_response.rs  check_state.rs  health_check.rs  keyset_rotation.rs  verification_address.rs
crates/tests/node-tests/src/: lib.rs
crates/tests/signer-tests/: Cargo.toml  README.md  declare_keyset.rs  get_root_pubkey.rs  health_check.rs  sign_blinded_message.rs  verify_proofs.rs
crates/tests/signer-tests/src/: lib.rs
crates/tests/test-utils/: Cargo.toml
crates/tests/test-utils/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: db.rs  lib.rs  melt.rs  mint.rs  send.rs  sync.rs  types.rs
crates/wallet/src/db/: balance.rs  melt_quote.rs  mint_quote.rs  mod.rs  node.rs  proof.rs
crates/wallet/src/errors/: mod.rs
crates/wallet/src/types/: compact_wad.rs  mod.rs  node_url.rs
mobile/: Cargo.toml  rust-toolchain.toml
mobile/salto/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
mobile/salto/scripts/: edit-android-gen-files.sh
mobile/salto/src/: app.html  commands.ts  stores.ts  utils.ts
mobile/salto/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
mobile/salto/src-tauri/capabilities/: default.json  mobile.json
mobile/salto/src-tauri/src/: background_tasks.rs  lib.rs  main.rs  migrations.rs  parse_asset_amount.rs
mobile/salto/src/routes/: +page.svelte
mobile/salto/src/types/: index.ts  node.ts  price.ts  quote.ts  starknet.ts  wad.ts
(+273 files in other folders)
