[workspace]
resolver = "2"
members = [
  "crates/bin/node", "crates/bin/indexer", "crates/bin/signer",
  "crates/starknet-payment-indexer",
  "crates/db-node",
  "crates/nuts",
  "crates/starknet",
  "crates/wallet",
  "crates/bin/cli-wallet",
  "crates/tests/signer-tests",
]
default-members = [
  "crates/bin/node", "crates/bin/indexer", "crates/bin/signer",
  "crates/starknet-payment-indexer",
  "crates/db-node",
  "crates/nuts",
  "crates/starknet",
  "crates/wallet",
  "crates/bin/cli-wallet",
]


[workspace.dependencies]
axum = "0.8.1"
tonic = "0.12.3"
tonic-types = "0.12.3"
tonic-health = "0.12.3"
hyper = "1.6.0"
axum-response-cache = "0.2.0"
http = "1.2.0"
tower = "0.5.2"
tokio = "1.42.0"
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
url = "2.5.4"
log = "0.4.25"
ciborium = "0.2.2"
bitcoin = "0.32.2"
num-derive = "0.4.2"
num-bigint = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
starknet-types-core = "0.1.7"
uuid = "1.11.0"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
sqlx = "0.8.2"
parking_lot = "0.12.3"
rand = "0.8.5"
starknet-core = "0.12.1"
futures = "0.3.31"
anyhow = "1.0.95"
apibara-core = { git = "https://github.com/apibara/dna.git", rev = "f1b782e0e86b"}
apibara-sdk = { git = "https://github.com/apibara/dna.git", rev = "f1b782e0e86b"}
rusqlite = "0.32.0"
primitive-types = "0.13.1"
rayon = "1.10.0"
reqwest = "0.12.12"
toml = "0.8.20"
clap = "4.5.29"
tokio-stream = "0.1.17"
prost = "0.13.5"
dirs = "6.0.0"
sha2 = "0.10"
rustainers = "0.15.1"

# Local crates
nuts = { path = "crates/nuts" }
starknet-types = { path = "crates/starknet" }
db-node  = { path = "crates/db-node" }
starknet-payment-indexer = { path = "crates/starknet-payment-indexer" }
signer = { path = "crates/bin/signer" }
node = { path = "crates/bin/node" }
wallet = { path = "crates/wallet" }






