[workspace]
resolver = "3"
members = [
  # Bins
  "crates/bin/node",
  "crates/bin/signer",
  "crates/bin/cli-wallet",
  "crates/bin/starknet-on-chain-setup",

  # Libs
  "crates/node-client",
  "crates/db-node",
  "crates/nuts",
  "crates/wallet",
  "crates/open-telemetry-tracing",
  "crates/liquidity-source",
  "crates/test-utils",
  # Starknet libs
  "crates/starknet/payment-indexer",
  "crates/starknet/liquidity-source",
  "crates/starknet/types",
  # Integration tests
  "crates/tests/signer-tests",
  "crates/tests/node-tests",
  # E2e tests
  "crates/tests/e2e-tests",
  "crates/tests/concurrency-tests",
]
default-members = [
  # Bins
  "crates/bin/node",
  "crates/bin/signer",
  "crates/bin/cli-wallet",
  "crates/bin/starknet-on-chain-setup",
  # Libs
  "crates/node-client",
  "crates/db-node",
  "crates/nuts",
  "crates/wallet",
  "crates/open-telemetry-tracing",
  "crates/liquidity-source",
  "crates/test-utils",
  # Starknet libs
  "crates/starknet/payment-indexer",
  "crates/starknet/liquidity-source",
  "crates/starknet/types",
]


[workspace.dependencies]
axum = "0.8.1"
tonic = "0.13.1"
tonic-types = "0.13.0"
tonic-health = "0.13.0"
hyper = "1.6.0"
axum-response-cache = "0.2.0"
http = "1.3.1"
tower = "0.5.2"
tokio = "1.44.1"
tokio-util = "0.7.14"
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
url = "2.5.4"
log = "0.4.25"
ciborium = "0.2.2"
bitcoin = "0.32.2"
bitcoin_hashes = "0.16.0"
num-derive = "0.4.2"
num-bigint = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
env_logger = "0.11.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
starknet-types-core = "0.1.7"
starknet-crypto = "0.7.4"
uuid = "1.11.0"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
parking_lot = "0.12.3"
rand = "0.9.0"
starknet-core = "0.13.0"
futures = "0.3.31"
futures-util = "0.3.31"
anyhow = "1.0.95"
apibara-core = { git = "https://github.com/apibara/dna.git", rev = "f1b782e0e86b" }
apibara-sdk = { git = "https://github.com/apibara/dna.git", rev = "f1b782e0e86b" }
primitive-types = "0.13.1"
rayon = "1.10.0"
reqwest = "0.12.12"
toml = "0.8.20"
clap = "4.5.29"
tokio-stream = "0.1.17"
prost = "0.13.5"
dirs = "6.0.0"
sha2 = "0.10"
rustainers = "0.15.1"
assert_matches = "1.5.0"
starknet = "0.13.0"
phf = { version = "0.11.3" }
async-trait = "0.1.88"
itertools = "0.14"
dashmap = "6.1.0"
bytes = "1.10.1"
uint = "0.10.0"

# OPTL
opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0" }
opentelemetry-otlp = { version = "0.29.0" }
tracing-opentelemetry = "0.30.0"
tower-otel = "0.5.0"

# TLS
tonic-tls = { version = "0.3.0", default-features = false }
openssl = "0.10"
openssl-sys = "0.9.108"

# Db
# Those libs depend on the dynlib `libsqlite3-sys`,
# wich create conflict if they are not all referencing the exact same version.
# Be carefull when updating any of those
sqlx = { version = "0.8.3", default-features = false }
rusqlite = "0.32.0"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"

# Local crates
# Clients
signer = { path = "crates/bin/signer" }
node-client = { path = "crates/node-client" }
# Starknet
starknet-types = { path = "crates/starknet/types" }
starknet-payment-indexer = { path = "crates/starknet/payment-indexer" }
starknet-liquidity-source = { path = "crates/starknet/liquidity-source" }
# Tracing
open-telemetry-tracing = { path = "crates/open-telemetry-tracing" }
# Others
nuts = { path = "crates/nuts" }
db-node = { path = "crates/db-node" }
wallet = { path = "crates/wallet" }
liquidity-source = { path = "crates/liquidity-source" }
test-utils = { path = "crates/test-utils" }
