[package]
name = "invoice-payment-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
