[package]
name = "liquidity-source"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
bitcoin_hashes = { workspace = true }

# Local crate
nuts = { workspace = true }
# TODO: the trait should not be using starknet types
starknet-types = { workspace = true }

# Optional starknet
tonic = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
starknet-cashier = { workspace = true, optional = true }
starknet-types-core = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }


[features]
default = []
starknet = ["dep:tonic", "dep:starknet-cashier", "dep:thiserror", "dep:serde_json", "dep:starknet-types-core", "dep:starknet"]
mock = ["dep:thiserror"]
