[package]
name = "nuts"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
bitcoin = { workspace = true, features = ["base64", "rand-std"]}
num-traits = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
