[package]
name = "starknet-payment-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
starknet-core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror = { workspace = true }
rusqlite = { workspace = true }
starknet-types = { workspace = true }
anyhow = { workspace = true }

apibara-core = { workspace = true }
apibara-sdk = { workspace = true }
