[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
node = { workspace = true }
futures = { workspace = true }
nuts = { workspace = true }
tonic  = { workspace = true }
rusqlite = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
