[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
node = { workspace = true }
futures = { workspace = true }
nuts = { workspace = true, features = ["rusqlite"] }
tonic = { workspace = true }
rusqlite = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bitcoin = { workspace = true }
ciborium = { workspace = true }
itertools = { workspace = true }