[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
node = { workspace = true }
futures = { workspace = true }
nuts = { workspace = true, features = ["rusqlite"] }
tonic = { workspace = true }
rusqlite = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
bitcoin = { workspace = true }
ciborium = { workspace = true }
itertools = { workspace = true }

# tls
tonic-tls = { workspace = true, default-features=false, features=["openssl"], optional = true  }
openssl = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:tonic-tls", "dep:openssl"]
tls-allow-self-signed = ["dep:openssl-sys"]
