[package]
name = "cli-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
serde_json = { workspace = true }
node-client = { workspace = true }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
starknet-types-core = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
primitive-types = { workspace = true }
thiserror = { workspace = true }
bitcoin = { workspace = true }

# Db
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true }

# Local
starknet-types = { workspace = true }
starknet-liquidity-source = { workspace = true }
nuts = { workspace = true }
wallet = { workspace = true }


[features]
default = []
tls = ["wallet/tls"]
tls-allow-self-signed = ["tls", "wallet/tls-allow-self-signed"]
