[package]
name = "signer"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { workspace = true }
nuts = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tonic-types = { workspace = true }
tonic-health = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
prost = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }

# OPTL
tracing = { workspace = true }
open-telemetry-tracing = { workspace = true }
tower-otel = { workspace = true }
tower = { workspace = true }
opentelemetry = { workspace = true }

# Local deps
starknet-types = { workspace = true }

[build-dependencies]
tonic-build = "0.13.0"

