[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
askama = { version = "0.12", features = ["with-axum", "serde-json"] }
askama_axum = "0.4"
tracing = { workspace = true }
tracing-subscriber =  { workspace = true, features = ["env-filter"] }
starknet-core = { workspace = true }

# Local deps
starknet-types = { workspace = true }
