[package]
name = "nuts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
ciborium = { workspace = true }
bitcoin = { workspace = true, features = ["base64", "rand-std"] }
num-traits = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

# Optional
rusqlite = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["macros"] }
starknet-types-core = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
bip39 = { workspace = true }

[features]
default = []
starknet = ["dep:starknet-types-core"]
sqlx = ["dep:sqlx"]
rusqlite = ["dep:rusqlite"]
nut9 = []
nut13 = []
nut19 = []
