[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
node-client = { workspace = true }
futures = { workspace = true }
nuts = { workspace = true, features = ["rusqlite", "nut13"] }
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
bitcoin = { workspace = true }
ciborium = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bip39 = { workspace = true, features = ["rand"] }

# tls
tonic-tls = { workspace = true, default-features=false, features=["openssl"], optional = true  }
openssl = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }

# Db
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true }

[features]
default = []
tls = ["dep:tonic-tls", "dep:openssl"]
tls-allow-self-signed = ["dep:openssl-sys"]
