[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
node-client = { workspace = true }
futures = { workspace = true }
nuts = { workspace = true, features = ["rusqlite", "nut13"] }
tonic = { workspace = true, features = ["tls-ring"] }
prost = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }
bitcoin = { workspace = true }
ciborium = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bip39 = { workspace = true, features = ["rand"] }
uuid = { workspace = true, features = ["v5"] }
tonic-types = { workspace = true }

# Db
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true, features = ["uuid"] }

[features]
default = []
