[package]
name = "node-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
signer = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
nuts = { workspace = true }
starknet-types-core = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
node-client = { workspace = true, features = [
    "keyset-rotation"
] }
starknet-liquidity-source = { workspace = true }
liquidity-source = { workspace = true  }
starknet-types = { workspace = true }
db-node = { workspace = true }

[[test]]
name = "keyset_rotation"
path = "keyset_rotation.rs"

[[test]]
name = "health_check"
path = "health_check.rs"

[[test]]
name = "cache_response"
path = "cache_response.rs"

[[test]]
name = "verification_address"
path = "verification_address.rs"

[[test]]
name = "check_state"
path = "check_state.rs"
