[package]
name = "test-utils"
version = "0.1.0"
edition = "2024"

[features]
e2e = ["itertools", "primitive-types", "r2d2", "r2d2_sqlite", "rusqlite", "wallet", "bitcoin", "bip39"]
concurrency = ["futures"]

strk = ["starknet-types", "starknet", "starknet-types-core", "starknet-liquidity-source"]

e2e-starknet = ["e2e", "strk"]
concurrency-starknet = ["concurrency", "strk", "primitive-types"]
dev = ["e2e", "strk", "concurrency"]

[dependencies]
thiserror = { workspace = true }
node-client = { workspace = true  }
nuts = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
url = { workspace = true }
log = { workspace = true }

# Optional
futures = { workspace = true, optional = true }
starknet-types = { workspace = true, optional = true  }
starknet-types-core = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
primitive-types = { workspace = true, optional = true }
starknet-liquidity-source = { workspace = true, optional = true }
starknet = { workspace = true, optional = true }
wallet = { workspace = true, optional = true  }
bip39 = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }

# Db
r2d2_sqlite = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
