[package]
name = "salto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "salto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# db
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }

# Others
thiserror = { workspace = true }
primitive-types = { workspace = true }
num-traits = { workspace = true }
uint = { workspace = true }

# Local
wallet = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
starknet-types = { workspace = true }
nuts = { workspace = true }
tauri-plugin-os = "2"
