[package]
name = "salto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "salto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-sql = { workspace = true, features = ["sqlite"] }
tauri-plugin-log = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }

# Serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# db
rusqlite = { workspace = true }
r2d2_sqlite = { workspace = true }
r2d2 = { workspace = true }

# Others
thiserror = { workspace = true }
primitive-types = { workspace = true }
num-traits = { workspace = true }
uint = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }

# Local
wallet = { workspace = true }
starknet-types = { workspace = true }
nuts = { workspace = true }

[features]
tls-local-mkcert = []
