[package]
name = "starknet-liquidity-source"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin_hashes = { workspace = true }
starknet-types-core = { workspace = true }
sqlx = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }
primitive-types = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }

# OPTL
http = { workspace = true }
tower = { workspace = true }

# Starknet
starknet = { workspace = true }

# Local
db-node = { workspace = true }
starknet-types = { workspace = true }
liquidity-source = { workspace = true }
nuts = { workspace = true }
substreams-sink = { workspace = true }


[features]
default = []
mock = []
