[package]
name = "starknet-types"
version = "0.1.0"
edition = "2024"

[dependencies]
starknet-types-core = { workspace = true, features = ["num-traits", "serde"] }
nuts = { workspace = true, features = ["starknet"] }
serde = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
primitive-types = { workspace = true }
phf = { workspace = true, features = ["macros"] }
bitcoin_hashes = { workspace = true }
starknet-crypto = { workspace = true }
tracing = { workspace = true }

# Local deps
starknet = { workspace = true }


